Fixed overflowed site layout(1).

--- a/css/customStyles.css
+++ b/css/customStyles.css
@@ -46,8 +46,8 @@
 
 .table
 {
-    border: 1px solid #3b3b3b; 
-    font-size: 1em;
+/*    border: 1px solid #3b3b3b; */
+    font-size: 0.8em;
     background: #3b3b3b;
     
     border-collapse:separate;
